tests/compile_fail/resolver_undefined_identifier.stderr
error: Undefined identifier "meters".
  --> tests/compile_fail/resolver_undefined_identifier.rs:11:44
   |
11 |         unit (kilometers, "km") = 1000.0 * meters,
   |                                            ^^^^^^
